# libsigmf

./: .gitignore  .gitlab-ci.yml  .gitmodules  ABOUT  CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  mkdocs.yml  performance.json
.github/workflows/: ccpp.yml
cmake/: FindFlatBuffers.cmake  SigmfConfig.cmake.in  config.cmake.in
docs/: index.md
examples/: CMakeLists.txt  example.sigmf-meta  example2.sigmf-meta  example_reading_sigmf_file.cpp  example_record.sigmf-meta  example_record_with_multiple_namespaces.cpp  example_record_with_variadic_dataclass.cpp  example_sigmf_json_roundtrip.cpp  flatbuffer_patterns.cpp
sigmf_protocols/: sigmf_adsb.fbs  sigmf_adsb_generated.h  sigmf_antenna.fbs  sigmf_antenna_generated.h  sigmf_capture_details.fbs  sigmf_capture_details_generated.h  sigmf_core.fbs  sigmf_core_generated.h  sigmf_signal.fbs  sigmf_signal_generated.h  sigmf_spatial.fbs  sigmf_spatial_generated.h  sigmf_wifi.fbs  sigmf_wifi_generated.h  testing_protocols.fbs  testing_protocols_generated.h
src/: annotation.h  capture.h  collection.h  flatbuffers_json_visitor.h  flatbuffers_json_visitor.h.bak  flatbuffers_type_to_json.h  global.h  sigmf.h  sigmf_helpers.h  variadic_data_class.h
src/include/libsigmf/: annotation.h  flatbuffers_json_visitor.h  flatbuffers_type_to_json.h  json_wrap.h  sigmf.h  sigmf_forward.h  sigmf_helpers.h  variadic_data_class.h  variadic_data_class_forward.h
src/lib/: flatbuffers_json_visitor.cpp  json_wrap.cpp
